TxScriptParser.py
# Generated from TxScript.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class TxScriptParser ( Parser ):

    grammarFileName = "TxScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'contract'", "'{'", "'}'", "'property'", 
                     "'int'", "'bool'", "'string'", "'address'", "'('", 
                     "'->'", "')'", "'constraint'", "'function'", "'payable'", 
                     "'constructor'", "'skip'", "'require'", "'if'", "'else'", 
                     "'='", "'['", "']'", "'!'", "';'", "'*'", "'/'", "'+'", 
                     "'-'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
                     "'and'", "'&&'", "'or'", "'||'", "'not'", "'Forall'", 
                     "'Exists'", "'true'", "'True'", "'false'", "'False'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "LABEL", "LABELUPPER", "NUMBER", 
                      "REAL", "TYPE", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_contractExpr = 0
    RULE_propertiesExpr = 1
    RULE_propertyExpr = 2
    RULE_declsExpr = 3
    RULE_declExpr = 4
    RULE_argsExpr = 5
    RULE_argExpr = 6
    RULE_cmdExpr = 7
    RULE_expression = 8
    RULE_qslf = 9
    RULE_constantExpr = 10

    ruleNames =  [ "contractExpr", "propertiesExpr", "propertyExpr", "declsExpr", 
                   "declExpr", "argsExpr", "argExpr", "cmdExpr", "expression", 
                   "qslf", "constantExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    LABEL=46
    LABELUPPER=47
    NUMBER=48
    REAL=49
    TYPE=50
    WS=51
    COMMENT=52
    LINE_COMMENT=53

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class ContractExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.name = None # Token
            self.decl = None # DeclsExprContext
            self.properties = None # PropertiesExprContext

        def LABELUPPER(self):
            return self.getToken(TxScriptParser.LABELUPPER, 0)

        def declsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.DeclsExprContext,0)


        def propertiesExpr(self):
            return self.getTypedRuleContext(TxScriptParser.PropertiesExprContext,0)


        def getRuleIndex(self):
            return TxScriptParser.RULE_contractExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContractExpr" ):
                listener.enterContractExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContractExpr" ):
                listener.exitContractExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContractExpr" ):
                return visitor.visitContractExpr(self)
            else:
                return visitor.visitChildren(self)




    def contractExpr(self):

        localctx = TxScriptParser.ContractExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_contractExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 22
            self.match(TxScriptParser.T__0)
            self.state = 23
            localctx.name = self.match(TxScriptParser.LABELUPPER)
            self.state = 24
            self.match(TxScriptParser.T__1)
            self.state = 25
            localctx.decl = self.declsExpr()
            self.state = 26
            self.match(TxScriptParser.T__2)
            self.state = 27
            localctx.properties = self.propertiesExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PropertiesExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def propertyExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.PropertyExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.PropertyExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_propertiesExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertiesExpr" ):
                listener.enterPropertiesExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertiesExpr" ):
                listener.exitPropertiesExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertiesExpr" ):
                return visitor.visitPropertiesExpr(self)
            else:
                return visitor.visitChildren(self)




    def propertiesExpr(self):

        localctx = TxScriptParser.PropertiesExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_propertiesExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==TxScriptParser.T__3:
                self.state = 29
                self.propertyExpr()
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PropertyExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.phi = None # QslfContext

        def qslf(self):
            return self.getTypedRuleContext(TxScriptParser.QslfContext,0)


        def getRuleIndex(self):
            return TxScriptParser.RULE_propertyExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPropertyExpr" ):
                listener.enterPropertyExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPropertyExpr" ):
                listener.exitPropertyExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPropertyExpr" ):
                return visitor.visitPropertyExpr(self)
            else:
                return visitor.visitChildren(self)




    def propertyExpr(self):

        localctx = TxScriptParser.PropertyExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_propertyExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.match(TxScriptParser.T__3)
            self.state = 36
            self.match(TxScriptParser.T__1)
            self.state = 37
            localctx.phi = self.qslf()
            self.state = 38
            self.match(TxScriptParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclsExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.DeclExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.DeclExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_declsExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclsExpr" ):
                listener.enterDeclsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclsExpr" ):
                listener.exitDeclsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclsExpr" ):
                return visitor.visitDeclsExpr(self)
            else:
                return visitor.visitChildren(self)




    def declsExpr(self):

        localctx = TxScriptParser.DeclsExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_declsExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 40
                self.declExpr()
                self.state = 43 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << TxScriptParser.T__4) | (1 << TxScriptParser.T__5) | (1 << TxScriptParser.T__6) | (1 << TxScriptParser.T__7) | (1 << TxScriptParser.T__8) | (1 << TxScriptParser.T__11) | (1 << TxScriptParser.T__12) | (1 << TxScriptParser.T__14))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TxScriptParser.RULE_declExpr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ConstrDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstrDecl" ):
                listener.enterConstrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstrDecl" ):
                listener.exitConstrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstrDecl" ):
                return visitor.visitConstrDecl(self)
            else:
                return visitor.visitChildren(self)


    class NonPayableFunDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonPayableFunDecl" ):
                listener.enterNonPayableFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonPayableFunDecl" ):
                listener.exitNonPayableFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonPayableFunDecl" ):
                return visitor.visitNonPayableFunDecl(self)
            else:
                return visitor.visitChildren(self)


    class NonPayableConstructorDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNonPayableConstructorDecl" ):
                listener.enterNonPayableConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNonPayableConstructorDecl" ):
                listener.exitNonPayableConstructorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonPayableConstructorDecl" ):
                return visitor.visitNonPayableConstructorDecl(self)
            else:
                return visitor.visitChildren(self)


    class BoolDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolDecl" ):
                listener.enterBoolDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolDecl" ):
                listener.exitBoolDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBoolDecl" ):
                return visitor.visitBoolDecl(self)
            else:
                return visitor.visitChildren(self)


    class AddrDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddrDecl" ):
                listener.enterAddrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddrDecl" ):
                listener.exitAddrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddrDecl" ):
                return visitor.visitAddrDecl(self)
            else:
                return visitor.visitChildren(self)


    class PayableConstructorDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPayableConstructorDecl" ):
                listener.enterPayableConstructorDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPayableConstructorDecl" ):
                listener.exitPayableConstructorDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPayableConstructorDecl" ):
                return visitor.visitPayableConstructorDecl(self)
            else:
                return visitor.visitChildren(self)


    class StrDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStrDecl" ):
                listener.enterStrDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStrDecl" ):
                listener.exitStrDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStrDecl" ):
                return visitor.visitStrDecl(self)
            else:
                return visitor.visitChildren(self)


    class MapAddrDeclIntContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapAddrDeclInt" ):
                listener.enterMapAddrDeclInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapAddrDeclInt" ):
                listener.exitMapAddrDeclInt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapAddrDeclInt" ):
                return visitor.visitMapAddrDeclInt(self)
            else:
                return visitor.visitChildren(self)


    class PayableFunDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.name = None # Token
            self.args = None # ArgsExprContext
            self.cmds = None # CmdExprContext
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)
        def argsExpr(self):
            return self.getTypedRuleContext(TxScriptParser.ArgsExprContext,0)

        def cmdExpr(self):
            return self.getTypedRuleContext(TxScriptParser.CmdExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPayableFunDecl" ):
                listener.enterPayableFunDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPayableFunDecl" ):
                listener.exitPayableFunDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPayableFunDecl" ):
                return visitor.visitPayableFunDecl(self)
            else:
                return visitor.visitChildren(self)


    class IntDeclContext(DeclExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a TxScriptParser.DeclExprContext
            super().__init__(parser)
            self.var = None # Token
            self.copyFrom(ctx)

        def LABEL(self):
            return self.getToken(TxScriptParser.LABEL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIntDecl" ):
                listener.enterIntDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIntDecl" ):
                listener.exitIntDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIntDecl" ):
                return visitor.visitIntDecl(self)
            else:
                return visitor.visitChildren(self)



    def declExpr(self):

        localctx = TxScriptParser.DeclExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declExpr)
        try:
            self.state = 104
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = TxScriptParser.IntDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 45
                self.match(TxScriptParser.T__4)
                self.state = 46
                localctx.var = self.match(TxScriptParser.LABEL)
                pass

            elif la_ == 2:
                localctx = TxScriptParser.BoolDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.match(TxScriptParser.T__5)
                self.state = 48
                localctx.var = self.match(TxScriptParser.LABEL)
                pass

            elif la_ == 3:
                localctx = TxScriptParser.StrDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 49
                self.match(TxScriptParser.T__6)
                self.state = 50
                localctx.var = self.match(TxScriptParser.LABEL)
                pass

            elif la_ == 4:
                localctx = TxScriptParser.AddrDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 51
                self.match(TxScriptParser.T__7)
                self.state = 52
                localctx.var = self.match(TxScriptParser.LABEL)
                pass

            elif la_ == 5:
                localctx = TxScriptParser.MapAddrDeclIntContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 53
                self.match(TxScriptParser.T__8)
                self.state = 54
                self.match(TxScriptParser.T__7)
                self.state = 55
                self.match(TxScriptParser.T__9)
                self.state = 56
                self.match(TxScriptParser.T__4)
                self.state = 57
                self.match(TxScriptParser.T__10)
                self.state = 58
                localctx.var = self.match(TxScriptParser.LABEL)
                pass

            elif la_ == 6:
                localctx = TxScriptParser.ConstrDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 59
                self.match(TxScriptParser.T__11)
                self.state = 60
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 61
                self.match(TxScriptParser.T__8)
                self.state = 62
                localctx.args = self.argsExpr()
                self.state = 63
                self.match(TxScriptParser.T__10)
                self.state = 64
                self.match(TxScriptParser.T__1)
                self.state = 65
                localctx.cmds = self.cmdExpr(0)
                self.state = 66
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 7:
                localctx = TxScriptParser.PayableFunDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 68
                self.match(TxScriptParser.T__12)
                self.state = 69
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 70
                self.match(TxScriptParser.T__8)
                self.state = 71
                localctx.args = self.argsExpr()
                self.state = 72
                self.match(TxScriptParser.T__10)
                self.state = 73
                self.match(TxScriptParser.T__13)
                self.state = 74
                self.match(TxScriptParser.T__1)
                self.state = 75
                localctx.cmds = self.cmdExpr(0)
                self.state = 76
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 8:
                localctx = TxScriptParser.NonPayableFunDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 78
                self.match(TxScriptParser.T__12)
                self.state = 79
                localctx.name = self.match(TxScriptParser.LABEL)
                self.state = 80
                self.match(TxScriptParser.T__8)
                self.state = 81
                localctx.args = self.argsExpr()
                self.state = 82
                self.match(TxScriptParser.T__10)
                self.state = 83
                self.match(TxScriptParser.T__1)
                self.state = 84
                localctx.cmds = self.cmdExpr(0)
                self.state = 85
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 9:
                localctx = TxScriptParser.PayableConstructorDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 87
                self.match(TxScriptParser.T__14)
                self.state = 88
                self.match(TxScriptParser.T__8)
                self.state = 89
                localctx.args = self.argsExpr()
                self.state = 90
                self.match(TxScriptParser.T__10)
                self.state = 91
                self.match(TxScriptParser.T__13)
                self.state = 92
                self.match(TxScriptParser.T__1)
                self.state = 93
                localctx.cmds = self.cmdExpr(0)
                self.state = 94
                self.match(TxScriptParser.T__2)
                pass

            elif la_ == 10:
                localctx = TxScriptParser.NonPayableConstructorDeclContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 96
                self.match(TxScriptParser.T__14)
                self.state = 97
                self.match(TxScriptParser.T__8)
                self.state = 98
                localctx.args = self.argsExpr()
                self.state = 99
                self.match(TxScriptParser.T__10)
                self.state = 100
                self.match(TxScriptParser.T__1)
                self.state = 101
                localctx.cmds = self.cmdExpr(0)
                self.state = 102
                self.match(TxScriptParser.T__2)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def argExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TxScriptParser.ArgExprContext)
            else:
                return self.getTypedRuleContext(TxScriptParser.ArgExprContext,i)


        def getRuleIndex(self):
            return TxScriptParser.RULE_argsExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgsExpr" ):
                listener.enterArgsExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgsExpr" ):
                listener.exitArgsExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgsExpr" ):
                return visitor.visitArgsExpr(self)
            else:
                return visitor.visitChildren(self)




    def argsExpr(self):
